# Transformers-for-Reinforcement-Learning

./: .gitignore  0625.py  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
demo/: app.py
notebooks/: analysis.ipynb
scripts/: demo.py  train.py
src/: __init__.py
src/envs/: data_collection.py
src/eval/: evaluator.py
src/train/: __init__.py  trainer.py
src/utils/: config.py  device.py  logging.py
tests/: test_models.py
